syntax = "proto3";
package spire.agent.svidstore;
option go_package = "github.com/spiffe/spire/proto/spire/plugin/agent/svidstore/v1;svidstorev1";

service SVIDStore {
    // Puts an X509-SVID in a configured secrets store
    rpc PutX509SVID(PutX509SVIDRequest) returns (PutX509SVIDResponse);

    // Deletes an SVID from the store
    rpc DeleteX509SVID(DeleteX509SVIDRequest) returns (DeleteX509SVIDResponse);
}

message PutX509SVIDRequest {
    // X509-SVID to be stored
    X509SVID svid = 1;

    // Relevant information to store on specific platform
    repeated string metadata = 2;

    // Federated bundles to store
    map<string, bytes> federated_bundles = 3;
}

message PutX509SVIDResponse {
}

message DeleteX509SVIDRequest {
    // Relevant information to delete on specific platform
    repeated string metadata = 1;
}

message DeleteX509SVIDResponse {
}

message X509SVID {
    // SPIFFE ID of the SVID.
    string spiffeID = 1;

    // Certificate and intermediates (ASN.1 DER encoded)
    repeated bytes cert_chain = 2;

    // Private key (ASN.1 DER encoded)
    bytes private_key = 3;

    // Bundle certificates (ASN.1 DER encoded)
    repeated bytes bundle = 4;

    // Expiration timestamp (seconds since Unix epoch).
    int64 expires_at = 5;
}

